# xlmelt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: DETECTION_RULES.md  OUTPUT_STRUCTURE.md  SECURITY_DESIGN.md
samples/: README.md  generate_samples.py
tests/: test_core.py
xlmelt/: __init__.py  cli.py  score.py  verify.py
xlmelt/core/: analyzer.py  chart_renderer.py  model.py  parser.py  xls_parser.py
xlmelt/output/: html_writer.py  index_writer.py  json_writer.py
