[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlmelt"
version = "0.1.0"
description = "Convert complex Excel files into AI-readable JSON/HTML"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "marimo-marine23" },
]
keywords = ["excel", "json", "html", "ai", "llm", "xlsx", "parser", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "openpyxl>=3.1.0",
    "click>=8.0.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/marimo-marine23/xlmelt"
Repository = "https://github.com/marimo-marine23/xlmelt"
Issues = "https://github.com/marimo-marine23/xlmelt/issues"
Changelog = "https://github.com/marimo-marine23/xlmelt/blob/main/CHANGELOG.md"

[project.scripts]
xlmelt = "xlmelt.cli:main"

[project.optional-dependencies]
charts = [
    "matplotlib>=3.5.0",
]
xls = [
    "xlrd>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.5.0",
]
